compiler/debug/TraceIterativeGVN.java segfaults in trace_PhaseIterGVN

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 8-pool, 9
    • Component/s: hotspot
    • b42
    • Verified

        Stack: [0x00007f4bd568e000,0x00007f4bd578f000], sp=0x00007f4bd5789670, free space=1005k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0xced778] MemNode::adr_type() const+0x58;; MemNode::adr_type() const+0x58
        V [libjvm.so+0xd8f8c6] Node::dump(char const*, outputStream*) const+0x486;; Node::dump(char const*, outputStream*) const+0x486
        V [libjvm.so+0xe575f7] PhaseIterGVN::trace_PhaseIterGVN(Node*, Node*, Type const*)+0xe7;; PhaseIterGVN::trace_PhaseIterGVN(Node*, Node*, Type const*)+0xe7
        V [libjvm.so+0xe58763] PhaseIterGVN::optimize()+0x93;; PhaseIterGVN::optimize()+0x93
        V [libjvm.so+0xc4e8e1] PhaseIdealLoop::build_and_optimize(bool, bool)+0x1181;; PhaseIdealLoop::build_and_optimize(bool, bool)+0x1181
        V [libjvm.so+0x6b56d3] Compile::Optimize()+0x633;; Compile::Optimize()+0x633
        V [libjvm.so+0x6b721b] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool)+0x12eb;; Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool)+0x12eb
        V [libjvm.so+0x589453] C2Compiler::compile_method(ciEnv*, ciMethod*, int)+0x103;; C2Compiler::compile_method(ciEnv*, ciMethod*, int)+0x103
        V [libjvm.so+0x6c3376] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x8b6;; CompileBroker::invoke_compiler_on_method(CompileTask*)+0x8b6
        V [libjvm.so+0x6c3f68] CompileBroker::compiler_thread_loop()+0x408;; CompileBroker::compiler_thread_loop()+0x408
        V [libjvm.so+0xffff84] JavaThread::thread_main_inner()+0x1d4;; JavaThread::thread_main_inner()+0x1d4
        V [libjvm.so+0x10002a6] JavaThread::run()+0x296;; JavaThread::run()+0x296
        V [libjvm.so+0xdd51e2] java_start(Thread*)+0xf2;; java_start(Thread*)+0xf2
        C [libpthread.so.0+0x7851]


        Current CompileTask:
        C2: 9258 981 b java.lang.Integer::getChars (131 bytes)

              Assignee:
              Vladimir Ivanov
              Reporter:
              Igor Veresov
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

                Created:
                Updated:
                Resolved: