8062258: compiler/debug/TraceIterativeGVN.java segfaults in trace_PhaseIterGVN

Reviewed-by: kvn